--- a/browser/themes/gnomestripe/browser/places/places.css
+++ b/browser/themes/gnomestripe/browser/places/places.css
@@ -1,4 +1,16 @@
 
+
+page > .placesTree > treechildren::-moz-tree-cell(leaf) ,
+page > .placesTree > treechildren::-moz-tree-image(leaf) {
+  cursor: pointer;
+}
+
+page > .placesTree > treechildren::-moz-tree-cell-text(leaf, hover) {
+  cursor: pointer;
+  text-decoration: underline;
+}
+
+
 #placesToolbar {
   border: none;
 }
