--- a/layout/reftests/bugs/398797-1-ref.html
+++ b/layout/reftests/bugs/398797-1-ref.html
@@ -5,7 +5,8 @@
 <body>
   <div class="green">foo</div>
   <div class="blue">
-    <span class="yellow">bar</span>
+    
+    <span class="yellow" style="float: left">bar</span>
   </div>
 </body>
 </html>
