--- a/toolkit/themes/winstripe/global/autocomplete.css
+++ b/toolkit/themes/winstripe/global/autocomplete.css
@@ -200,6 +200,11 @@ panel[type="autocomplete"],
   padding: 0 !important;
 }
 
+
+.autocomplete-treecol > .treecol-sortdirection {
+  -moz-appearance: none !important;
+}
+
 .autocomplete-treebody::-moz-tree-cell-text {
   -moz-padding-start: 8px;
 }
