--- a/layout/reftests/box-properties/box-sizing-3.html
+++ b/layout/reftests/box-properties/box-sizing-3.html
@@ -38,10 +38,10 @@
 
 
 <div style="width: auto">A B</div>
-<div style="width: -moz-intrinsic">A B</div>
-<div style="width: -moz-min-intrinsic">A B</div>
-<div style="width: -moz-shrink-wrap">A B</div>
-<div style="width: -moz-fill">A B</div>
+<div style="width: -moz-max-content">A B</div>
+<div style="width: -moz-min-content">A B</div>
+<div style="width: -moz-fit-content">A B</div>
+<div style="width: -moz-available">A B</div>
 <div style="width: 50px">A B</div>
 <div style="width: 60%">A B</div>
 
@@ -50,10 +50,10 @@
 <td id="bspadding"><div>
 
 <div style="width: auto">A B</div>
-<div style="width: -moz-intrinsic">A B</div>
-<div style="width: -moz-min-intrinsic">A B</div>
-<div style="width: -moz-shrink-wrap">A B</div>
-<div style="width: -moz-fill">A B</div>
+<div style="width: -moz-max-content">A B</div>
+<div style="width: -moz-min-content">A B</div>
+<div style="width: -moz-fit-content">A B</div>
+<div style="width: -moz-available">A B</div>
 <div style="width: 50px">A B</div>
 <div style="width: 60%">A B</div>
 
@@ -62,10 +62,10 @@
 <td id="bsborder"><div>
 
 <div style="width: auto">A B</div>
-<div style="width: -moz-intrinsic">A B</div>
-<div style="width: -moz-min-intrinsic">A B</div>
-<div style="width: -moz-shrink-wrap">A B</div>
-<div style="width: -moz-fill">A B</div>
+<div style="width: -moz-max-content">A B</div>
+<div style="width: -moz-min-content">A B</div>
+<div style="width: -moz-fit-content">A B</div>
+<div style="width: -moz-available">A B</div>
 <div style="width: 50px">A B</div>
 <div style="width: 60%">A B</div>
 
