--- a/browser/themes/gnomestripe/browser/browser.css
+++ b/browser/themes/gnomestripe/browser/browser.css
@@ -204,49 +204,53 @@ menuitem.bookmark-item {
 
 
 .bookmark-item  {
-  list-style-image: url("chrome://global/skin/icons/folder-item.png") !important;
+  list-style-image: url("chrome://global/skin/icons/folder-item.png");
   -moz-image-region: rect(0px, 16px, 16px, 0px)
 }
 
-.bookmark-item[container="true"] {
+.bookmark-item[container] {
+  -moz-image-region: rect(0px, 32px, 16px, 16px);
+}
+
+.bookmark-item[container][open] {
+  -moz-image-region: rect(16px, 32px, 32px, 16px);
+}
+
+
+
+.bookmark-item[container][livemark] { 
+  list-style-image: url("chrome://browser/skin/places/livemark-folder.png");
+  -moz-image-region: rect(0px, 16px, 16px, 0px);
+}
+
+.bookmark-item[container][livemark][chromedir="rtl"] { 
+  list-style-image: url("chrome://browser/skin/places/livemark-folder-rtl.png");
+  -moz-image-region: rect(0px, 16px, 16px, 0px);
+}
+
+.bookmark-item[container][livemark][open],
+.bookmark-item[container][livemark][open][chromedir="rtl"] { 
+  -moz-image-region: rect(16px, 16px, 32px, 0px);
+}
+
+.bookmark-item[type="menu"][livemark],
+.bookmark-item[type="menu"][livemark][chromedir="rtl"] { 
   -moz-image-region: rect(0px, 32px, 16px, 16px) !important;
 }
 
-.bookmark-item[open="true"],
-.bookmark-item[container="true"][open="true"] {
+.bookmark-item[type="menu"][livemark][open],
+.bookmark-item[type="menu"][livemark][open][chromedir="rtl"] { 
   -moz-image-region: rect(16px, 32px, 32px, 16px) !important;
 }
 
-
-
-.bookmark-item[livemark="true"] { 
-  list-style-image: url("chrome://browser/skin/places/livemark-folder.png") !important;
-  -moz-image-region: rect(0px, 16px, 16px, 0px) !important;
+.bookmark-item[container][tagContainer] {
+  list-style-image: url("chrome://mozapps/skin/places/tagContainerIcon.png");
+  -moz-image-region: auto;
 }
 
-.bookmark-item[livemark="true"][chromedir="rtl"] { 
-  list-style-image: url("chrome://browser/skin/places/livemark-folder-rtl.png") !important;
-  -moz-image-region: rect(0px, 16px, 16px, 0px) !important;
-}
-
-.bookmark-item[livemark="true"][open="true"],
-.bookmark-item[livemark="true"][open="true"][chromedir="rtl"] { 
-  -moz-image-region: rect(16px, 16px, 32px, 0px) !important;
-}
-
-.bookmark-item[type="menu"][livemark="true"],
-.bookmark-item[type="menu"][livemark="true"][chromedir="rtl"] { 
-  -moz-image-region: rect(0px, 32px, 16px, 16px) !important;
-}
-
-.bookmark-item[type="menu"][livemark="true"][open="true"],
-.bookmark-item[type="menu"][livemark="true"][open="true"][chromedir="rtl"] { 
-  -moz-image-region: rect(16px, 32px, 32px, 16px) !important;
-}
-
-
-.query-item[container] {
+.bookmark-item[container][query] {
   list-style-image: url("chrome://browser/skin/places/query.png");
+  -moz-image-region: auto;
 }
 
 
