--- a/extensions/inspector/resources/skin/classic/inspector.css
+++ b/extensions/inspector/resources/skin/classic/inspector.css
@@ -35,6 +35,5 @@
 
 
 
-@import url("chrome://communicator/skin");
+@import url("chrome://global/skin");
 @import url("chrome://inspector/content/inspector.css");
-
