--- a/toolkit/mozapps/downloads/content/downloads.css
+++ b/toolkit/mozapps/downloads/content/downloads.css
@@ -31,6 +31,10 @@ richlistitem[type="download"][state="7"] {
   -moz-binding: url('chrome://mozapps/content/downloads/download.xml#download-scanning');
 }
 
+richlistitem[type="download"][state="8"] {
+  -moz-binding: url('chrome://mozapps/content/downloads/download.xml#download-dirty');
+}
+
 
 richlistitem[type="download"]:not([selected="true"]) button {
   -moz-user-focus: none;
