--- a/toolkit/themes/winstripe/mozapps/handling/handling.css
+++ b/toolkit/themes/winstripe/mozapps/handling/handling.css
@@ -3,11 +3,15 @@
   width: 32px;
 }
 
-richlistitem {
+richlistitem[type] {
   min-height: 36px; 
+ }
+ 
+richlistitem {
+  -moz-box-align: center;
 }
 
 richlistbox {
   
-  min-height: 110px; 
+  min-height: 110px;
 }
