--- a/browser/themes/gnomestripe/browser/browser.css
+++ b/browser/themes/gnomestripe/browser/browser.css
@@ -730,6 +730,15 @@ toolbar[iconsize="small"] #paste-button[disabled="true"] {
   visibility: collapse;
 }
 
+#wrapper-urlbar-container #urlbar {
+  -moz-user-input: disabled;
+  cursor: -moz-grab;
+}
+
+#wrapper-urlbar-container #urlbar > .autocomplete-history-dropmarker {
+  display: none;
+}
+
 
 #urlbar .autocomplete-textbox-container {
   direction: ltr;
