--- a/browser/themes/winstripe/browser/browser.css
+++ b/browser/themes/winstripe/browser/browser.css
@@ -872,6 +872,15 @@ toolbar[iconsize="small"] #paste-button:not([disabled="true"]):hover:active {
   visibility: collapse;
 }
 
+#wrapper-urlbar-container #urlbar {
+  -moz-user-input: disabled;
+  cursor: -moz-grab;
+}
+
+#wrapper-urlbar-container #urlbar > .autocomplete-history-dropmarker {
+  display: none;
+}
+
 
 
 #urlbar .autocomplete-textbox-container {
