--- a/layout/mathml/content/src/mathml.css
+++ b/layout/mathml/content/src/mathml.css
@@ -46,13 +46,15 @@
 
 
 
+
+
 math {
   direction: ltr;
   unicode-bidi: embed;
   display: inline;
   font-size: inherit;
   font-style: normal;
-  font-family: CMSY10, Symbol, Times, Lucida Sans Unicode, MT Extra, Math1, Math2, Math3, Math4, Math5, serif;
+  font-family: STIXGeneral, Cambria, Cambria Math, DejaVu Serif, DejaVu Sans, Times, Lucida Sans Unicode, OpenSymbol, Standard Symbols L, serif;
   -moz-float-edge: margin-box;
 }
 math[mode="display"], math[display="block"] {
@@ -450,7 +452,7 @@ mtd[-moz-math-columnline="dashed"] {
 
 ::-moz-math-stretchy {
   font-style: normal;
-  font-family: serif;
+  font-family: serif; 
 
 }
 ::-moz-math-anonymous {
