--- a/browser/themes/gnomestripe/browser/browser.css
+++ b/browser/themes/gnomestripe/browser/browser.css
@@ -1180,11 +1180,12 @@ tabpanels {
 
 
 .tab-close-button > .toolbarbutton-icon {
-  -moz-margin-end: 0px !important;
+  
+
+  margin: -3px !important;
 }
 
 .tab-close-button {
-  -moz-appearance: none;
   -moz-margin-end: 6px;
   padding: 0px;
   border: none;
@@ -1205,6 +1206,10 @@ tabpanels {
 .tabs-closebutton {
   list-style-image: url("moz-icon://stock/gtk-close?size=menu");
   border: none;
+}
+
+.tabs-closebutton > .toolbarbutton-icon {
+  margin: -3px !important;
 }
 
 
