--- a/browser/base/content/browser.css
+++ b/browser/base/content/browser.css
@@ -75,3 +75,10 @@ tabbrowser {
 .tabbrowser-tabs[closebuttons="alltabs"] > .tabbrowser-tab > .tab-close-button {
   display: -moz-box;
 }
+
+
+window[chromehidden~="location"][chromehidden~="toolbar"] toolbar:not(.chromeclass-menubar),
+window[chromehidden~="toolbar"] toolbar:not(.toolbar-primary):not(.chromeclass-menubar)
+{
+  display: none;
+}
