--- a/browser/devtools/debugger/debugger.css
+++ b/browser/devtools/debugger/debugger.css
@@ -43,7 +43,7 @@
 
 
 
-#dbg-content > * > div {
+.dbg-default {
   cursor: default;
 }
 
@@ -164,14 +164,6 @@
 
 
 
-.vbox {
-  display: -moz-box;
-  -moz-box-orient: vertical;
-}
-
-.flex {
-  -moz-box-flex: 1;
-}
 
 .unselectable {
   -moz-user-select: -moz-none;
