--- a/layout/reftests/webm-video/poster-1.html
+++ b/layout/reftests/webm-video/poster-1.html
@@ -2,6 +2,6 @@
 <html>
 <body style="background:white;">
 
-<video src="black140x100.webm" poster="blue250x200.png"></video>
+<video preload="none" src="black140x100.webm" poster="blue250x200.png"></video>
 </body>
 </html>
