--- a/toolkit/themes/gnomestripe/global/inContentUI.css
+++ b/toolkit/themes/gnomestripe/global/inContentUI.css
@@ -61,9 +61,7 @@ html|html {
 
 *|*.main-content {
   
-  
-
-
+  overflow: hidden;
   background-color: -moz-Field;
   color: -moz-FieldText;
   border: 1px solid ThreeDShadow;
