--- a/toolkit/themes/pinstripe/global/inContentUI.css
+++ b/toolkit/themes/pinstripe/global/inContentUI.css
@@ -62,9 +62,7 @@ html|html {
 
 *|*.main-content {
   
-  
-
-
+  overflow: hidden;
   background-image: -moz-linear-gradient(top, rgba(255, 255, 255, 0.4), rgba(255, 255, 255, 0.25) 50%, rgba(255, 255, 255, 0.05));
   border: 1px solid rgba(50, 65, 92, 0.4);
   border-radius: 5px;
