--- a/toolkit/themes/winstripe/global/inContentUI.css
+++ b/toolkit/themes/winstripe/global/inContentUI.css
@@ -105,9 +105,7 @@ html|html {
 
 *|*.main-content {
   
-  
-
-
+  overflow: hidden;
   background-color: rgba(255, 255, 255, 0.35);
   background-image: -moz-linear-gradient(top,
                                          rgba(255, 255, 255, 0),
