--- a/mobile/android/themes/core/aboutDownloads.css
+++ b/mobile/android/themes/core/aboutDownloads.css
@@ -105,6 +105,11 @@ li:active .details {
   display: inline;
 }
 
+.displayState {
+  color:gray;
+  margin-bottom: -3px; 
+}
+
 .size:after {
   content: " - ";
   white-space: pre;
