--- a/layout/reftests/forms/placeholder/placeholder-20.html
+++ b/layout/reftests/forms/placeholder/placeholder-20.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html class="reftest-wait">
-  <link rel='stylesheet' type='text/css' href='placeholder-style.css'>
   
   <script type="text/javascript">
     function focusPlaceholder()
@@ -9,7 +8,7 @@
     }
     function setPlaceholder()
     {
-      document.getElementById('p1').placeholder = 'my placeholder';
+      document.getElementById('p1').placeholder = 'new placeholder';
     }
     function disableReftestWait()
     {
