--- a/browser/devtools/debugger/debugger.css
+++ b/browser/devtools/debugger/debugger.css
@@ -31,3 +31,11 @@
 .details[open] {
   display: -moz-box;
 }
+
+
+
+
+
+.devtools-toolbarbutton:not([label]) > .toolbarbutton-text {
+  display: none;
+}
