--- a/browser/devtools/commandline/gcli.css
+++ b/browser/devtools/commandline/gcli.css
@@ -2,23 +2,17 @@
 
 
 
-.gclichrome-output {
-  max-width: 350px;
-}
-
-.gclichrome-tooltip {
-  max-width: 350px;
-}
-
 .gcli-help-name {
   text-align: end;
 }
 
+.gcli-out-shortcut,
 .gcli-help-synopsis {
   cursor: pointer;
   display: inline-block;
 }
 
+.gcli-out-shortcut:before,
 .gcli-help-synopsis:before {
   content: '\bb';
 }
@@ -34,8 +28,9 @@
   width: 100%;
 }
 
-.gcli-menu-error {
-  overflow: hidden;
-  white-space: nowrap;
+.gcli-menu-name,
+.gcli-out-shortcut,
+.gcli-help-synopsis {
+  direction: ltr;
 }
 
