--- a/b2g/chrome/content/content.css
+++ b/b2g/chrome/content/content.css
@@ -78,3 +78,8 @@ xul|thumb {
   border-radius: 3px;
 }
 
+
+video > xul|videocontrols,
+audio > xul|videocontrols {
+  -moz-binding: url("chrome://global/content/bindings/videocontrols.xml#touchControls");
+}
