--- a/layout/reftests/forms/meter/style.css
+++ b/layout/reftests/forms/meter/style.css
@@ -4,35 +4,35 @@ div.meter-element {
   width: 5em;
   vertical-align: -0.2em;
 
-  
-  border: 2px solid;
-  -moz-border-top-colors: ThreeDShadow #e6e6e6;
-  -moz-border-right-colors: ThreeDHighlight #e6e6e6;
-  -moz-border-bottom-colors: ThreeDHighlight #e6e6e6;
-  -moz-border-left-colors: ThreeDShadow #e6e6e6;
-	
-  background-color: #e6e6e6;
+  background-color: grey;
 }
 
 div.meter-element.vertical {
   height: 5em;
-  width: 1em;	
+  width: 1em;
 }
 
 div.meter-bar {
   float: none ! important;
-   
+
   height: 100%;
   
 
 
 
 
-  
-  
-  background-color: #2eff46;
+
+  background-color: green;
 }
 
 meter, meter::-moz-meter-bar, div.meter-element, div.meter-bar {
   -moz-appearance: none;
+}
+
+meter {
+  background: grey;
+}
+
+meter::-moz-meter-bar {
+  background: green;
 }
