--- a/layout/style/forms.css
+++ b/layout/style/forms.css
@@ -671,14 +671,7 @@ meter {
   display: inline-block;
   vertical-align: -0.2em;
 
-  
-  border: 2px solid;
-  
-  -moz-border-top-colors: ThreeDShadow #e6e6e6;
-  -moz-border-right-colors: ThreeDHighlight #e6e6e6;
-  -moz-border-bottom-colors: ThreeDHighlight #e6e6e6;
-  -moz-border-left-colors: ThreeDShadow #e6e6e6;
-  background-color: #e6e6e6;
+  background: -moz-linear-gradient(top, #e6e6e6, #e6e6e6, #eeeeee 20%, #cccccc 45%, #cccccc 55%);
 }
 
 ::-moz-meter-bar {
@@ -691,11 +684,19 @@ meter {
   -moz-appearance: meterchunk;
   height: 100%;
   width: 100%;
+}
 
+:-moz-meter-optimum::-moz-meter-bar {
   
-
-
-  background-color: #2eff46;
+  background: -moz-linear-gradient(top, #ad7, #ad7, #cea 20%, #7a3 45%, #7a3 55%);
+}
+:-moz-meter-sub-optimum::-moz-meter-bar {
+  
+  background: -moz-linear-gradient(top, #fe7, #fe7, #ffc 20%, #db3 45%, #db3 55%);
+}
+:-moz-meter-sub-sub-optimum::-moz-meter-bar {
+  
+  background: -moz-linear-gradient(top, #f77, #f77, #fcc 20%, #d44 45%, #d44 55%);
 }
 
 %ifdef XP_OS2
