--- a/layout/style/forms.css
+++ b/layout/style/forms.css
@@ -667,9 +667,7 @@ progress {
 }
 
 meter {
-  
-
-
+  -moz-appearance: meterbar;
   display: inline-block;
   vertical-align: -0.2em;
 
@@ -684,14 +682,13 @@ meter {
 }
 
 ::-moz-meter-bar {
+  
   display: inline-block ! important;
   float: none ! important;
   position: static ! important;
   overflow: visible ! important;
-  
 
-
-
+  -moz-appearance: meterchunk;
   height: 100%;
   width: 100%;
 
