--- a/layout/reftests/font-inflation/relevant-width-overflow-1.html
+++ b/layout/reftests/font-inflation/relevant-width-overflow-1.html
@@ -1,16 +1,16 @@
 <!DOCTYPE HTML>
 <style>
 div.outer { font-size: 12px; width: 600px }
-div.inner { width: 450px; overflow: hidden; }
+div.middle { width: 450px; }
+div.inner { width: 300px; overflow: hidden; }
 </style>
 
 
 
 
-
-
-
 <div class="outer">
-  Text in outer.
-  <div class="inner">Text in inner.</div>
+  <div class="middle">
+    Text in middle.
+    <div class="inner">Text in inner.</div>
+  </div>
 </div>
