--- a/layout/reftests/font-inflation/threshold-scope-cell-2.html
+++ b/layout/reftests/font-inflation/threshold-scope-cell-2.html
@@ -3,6 +3,8 @@
 <style>
 body { font-size: 12px; width: 600px; }
 p { margin: 0 }
+table { border-spacing: 0 } /* FIXME: why is this needed?  Something to do with ComputeDescendantWidth in nsFontInflationData? */
+td { padding: 0 }
 </style>
 
 
@@ -11,13 +13,12 @@ p { margin: 0 }
 
 
 
-<table><tr><td>123456789
+<table><tr><td style="width: 600px">123456789
 123456789
 123456789
 123456789
 123456789</td></tr>
-
-<tr><td style="width: 600px">123456789
+<tr><td>123456789
 123456789
 123456789
 123456789
