--- a/browser/themes/shared/devtools/dark-theme.css
+++ b/browser/themes/shared/devtools/dark-theme.css
@@ -8,7 +8,7 @@
 
 .theme-body {
   background: #131c26;
-  color: #8fa1b2
+  color: #8fa1b2;
 }
 
 .theme-twisty {
@@ -47,7 +47,8 @@
   background: #26394D;
 }
 
-.theme-bg-darker {
+.theme-bg-darker,
+.cm-s-mozilla .CodeMirror-gutters {
   background-color: rgba(0,0,0,0.5);
 }
 
@@ -55,11 +56,14 @@
   background: #a18650;
 }
 
-.theme-link { 
+.theme-link,
+.cm-s-mozilla .cm-link { 
   color: #3689b2;
 }
 
-.theme-comment { 
+.theme-comment,
+.cm-s-mozilla .cm-meta,
+.cm-s-mozilla .cm-hr { 
   color: #5c6773;
 }
 
@@ -73,31 +77,51 @@
   border-color: #303b47;
 }
 
-.theme-fg-color1 { 
+.theme-fg-color1,
+.cm-s-mozilla .cm-variable-2,
+.cm-s-mozilla .cm-quote,
+.cm-s-mozilla .CodeMirror-matchingbracket { 
   color: #5c9966;
 }
 
-.theme-fg-color2 { 
+.theme-fg-color2,
+.cm-s-mozilla .cm-attribute,
+.cm-s-mozilla .cm-builtin,
+.cm-s-mozilla .cm-variable,
+.cm-s-mozilla .cm-def,
+.cm-s-mozilla .cm-variable-3,
+.cm-s-mozilla .cm-property,
+.cm-s-mozilla .cm-qualifier { 
   color: #3689b2;
 }
 
-.theme-fg-color3 { 
+.theme-fg-color3,
+.cm-s-mozilla .cm-tag,
+.cm-s-mozilla .cm-header { 
   color: #a673bf;
 }
 
-.theme-fg-color4 { 
+.theme-fg-color4,
+.cm-s-mozilla .cm-comment { 
   color: #6270b2;
 }
 
-.theme-fg-color5 { 
+.theme-fg-color5,
+.cm-s-mozilla .cm-bracket,
+.cm-s-mozilla .cm-atom,
+.cm-s-mozilla .cm-keyword { 
   color: #a18650;
 }
 
-.theme-fg-color6 { 
+.theme-fg-color6,
+.cm-s-mozilla .cm-string  { 
   color: #b26b47;
 }
 
-.theme-fg-color7 { 
+.theme-fg-color7,
+.cm-s-mozilla .CodeMirror-nonmatchingbracket,
+.cm-s-mozilla .cm-string-2,
+.cm-s-mozilla .cm-error { 
   color: #bf5656;
 }
 
@@ -109,4 +133,42 @@
 .computedview-colorswatch,
 .markupview-colorswatch {
   box-shadow: 0 0 0 1px rgba(0,0,0,0.5);
+}
+
+
+
+
+
+.CodeMirror { 
+  font-family: inherit;
+  font-size: inherit;
+  background: transparent;
+}
+
+.CodeMirror pre,
+.cm-s-mozilla .cm-operator,
+.cm-s-mozilla .cm-special,
+.cm-s-mozilla .cm-number { 
+  color: #8fa1b2;
+}
+
+.cm-s-mozilla .CodeMirror-lines .CodeMirror-cursor {
+  border-left: solid 1px #fff;
+}
+
+.cm-s-mozilla.CodeMirror-focused .CodeMirror-selected { 
+  background: rgb(185, 215, 253);
+}
+
+.dcm-s-mozilla .CodeMirror-selected { 
+  background: rgb(176, 176, 176);
+}
+
+.CodeMirror-activeline-background { 
+  background: rgba(185, 215, 253, .05);
+}
+
+.cm-s-markup-view pre {
+  line-height: 1.4em;
+  min-height: 1.4em;
 }
