--- a/browser/themes/shared/devtools/light-theme.css
+++ b/browser/themes/shared/devtools/light-theme.css
@@ -47,7 +47,8 @@
   background-color: #CCC;
 }
 
-.theme-bg-darker {
+.theme-bg-darker,
+.cm-s-mozilla .CodeMirror-gutters {
   background: #EFEFEF;
 }
 
@@ -55,11 +56,14 @@
   background: #a18650;
 }
 
-.theme-link { 
+.theme-link,
+.cm-s-mozilla .cm-link { 
   color: hsl(208,56%,40%);
 }
 
-.theme-comment { 
+.theme-comment,
+.cm-s-mozilla .cm-meta,
+.cm-s-mozilla .cm-hr { 
   color: hsl(90,2%,46%);
 }
 
@@ -73,31 +77,51 @@
   border-color: #cddae5;
 }
 
-.theme-fg-color1 { 
+.theme-fg-color1,
+.cm-s-mozilla .cm-variable-2,
+.cm-s-mozilla .cm-quote,
+.cm-s-mozilla .CodeMirror-matchingbracket { 
   color: hsl(72,100%,27%);
 }
 
-.theme-fg-color2 { 
+.theme-fg-color2,
+.cm-s-mozilla .cm-attribute,
+.cm-s-mozilla .cm-builtin,
+.cm-s-mozilla .cm-variable,
+.cm-s-mozilla .cm-def,
+.cm-s-mozilla .cm-variable-3,
+.cm-s-mozilla .cm-property,
+.cm-s-mozilla .cm-qualifier { 
   color: hsl(208,56%,40%);
 }
 
-.theme-fg-color3 { 
+.theme-fg-color3,
+.cm-s-mozilla .cm-tag,
+.cm-s-mozilla .cm-header { 
   color: hsl(208,81%,21%)
 }
 
-.theme-fg-color4 { 
+.theme-fg-color4,
+.cm-s-mozilla .cm-comment { 
   color: hsl(24,85%,39%);
 }
 
-.theme-fg-color5 { 
+.theme-fg-color5,
+.cm-s-mozilla .cm-bracket,
+.cm-s-mozilla .cm-keyword,
+.cm-s-mozilla .cm-atom { 
   color: #a18650;
 }
 
-.theme-fg-color6 { 
+.theme-fg-color6,
+.cm-s-mozilla .cm-string { 
   color: hsl(24,85%,39%);
 }
 
-.theme-fg-color7 { 
+.theme-fg-color7,
+.cm-s-mozilla .CodeMirror-nonmatchingbracket,
+.cm-s-mozilla .cm-string-2,
+.cm-s-mozilla .cm-error { 
   color: #bf5656;
 }
 
@@ -109,4 +133,42 @@
 .computedview-colorswatch,
 .markupview-colorswatch {
   box-shadow: 0 0 0 1px #EFEFEF;
+}
+
+
+
+
+
+.CodeMirror { 
+  font-family: inherit;
+  font-size: inherit;
+  background: transparent;
+}
+
+.CodeMirror pre,
+.cm-s-mozilla .cm-operator,
+.cm-s-mozilla .cm-special,
+.cm-s-mozilla .cm-number { 
+  color: black;
+}
+
+.cm-s-mozilla .CodeMirror-lines .CodeMirror-cursor {
+  border-left: solid 1px black;
+}
+
+.cm-s-mozilla.CodeMirror-focused .CodeMirror-selected { 
+  background: rgb(185, 215, 253);
+}
+
+.cm-s-mozilla .CodeMirror-selected { 
+  background: rgb(176, 176, 176);
+}
+
+.CodeMirror-activeline-background { 
+  background: rgba(185, 215, 253, .4);
+}
+
+.cm-s-markup-view pre {
+  line-height: 1.4em;
+  min-height: 1.4em;
 }
